--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 torch
-requests
-nest-asyncio
-aiohttp==3.12.2
-backoff==2.2.1
-nest_asyncio==1.6.0
 openai_whisper==20240930
 pandas==2.3.0
 protobuf==6.31.1
 requests==2.32.4
 streamlit==1.45.1
+aiohttp==3.12.2
+backoff==2.2.1
+nest_asyncio==1.6.0
+asyncio
+streamlit==1.45.1
 tenacity==8.5.0
-tenacity==9.1.2
-google-genai
+google-genai==1.19.0
+google-generativeai==0.8.5
