--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 torch
-openai_whisper==20240930
 pandas==2.3.0
-protobuf==6.31.1
 requests==2.32.4
+openai
 streamlit==1.45.1
 aiohttp==3.12.2
 backoff==2.2.1
